<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_arrow_right_24"
            android:title="@string/menu_maquillaje"
            />
        <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_baseline_arrow_right_24"
        android:title="@string/menu_skin" />

        <item
            android:id="@+id/nav_acc"
            android:icon="@drawable/ic_baseline_arrow_right_24"
            android:title="@string/menu_acc" />

        <item
            android:id="@+id/nav_tuto"
            android:icon="@drawable/ic_baseline_arrow_right_24"
            android:title="@string/menu_tutoriales" />

        <item
            android:id="@+id/nav_cabello"
            android:icon="@drawable/ic_baseline_arrow_right_24"
            android:title="@string/menu_hair" />

        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_baseline_arrow_right_24"
            android:title="@string/menu_blog" />



        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_fav" />

        <item
            android:id="@+id/nav_acerca"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_acerca" />

    </group>
</menu>